TE-3881: fix z-index in 'menu' molecule

--- a/Bundles/ShopUi/src/SprykerShop/Yves/ShopUi/Theme/default/components/molecules/menu/menu.scss
+++ b/Bundles/ShopUi/src/SprykerShop/Yves/ShopUi/Theme/default/components/molecules/menu/menu.scss
@@ -23,7 +23,7 @@
 
             &--has-children-dropdown {
                 position: relative;
-                z-index: $setting-zi-element;
+                z-index: $setting-zi-element + 1;
 
                 & > #{$name} {
                     @include helper-ui-shadow;
